WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277181
Set WillContinueLoading based on WillInternallyHandleFailure
https://bugs.webkit.org/show_bug.cgi?id=277181
Summary
Set WillContinueLoading based on WillInternallyHandleFailure
Matthew Finkel
Reported
2024-07-26 16:29:34 PDT
Set WillContinueLoading based on WillInternallyHandleFailure
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-26 16:29:49 PDT
<
rdar://problem/132603871
>
Matthew Finkel
Comment 2
2024-07-26 16:36:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31327
EWS
Comment 3
2024-07-30 19:57:40 PDT
Committed
281626@main
(2a407309138b): <
https://commits.webkit.org/281626@main
> Reviewed commits have been landed. Closing PR #31327 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug