Set WillContinueLoading based on WillInternallyHandleFailure https://bugs.webkit.org/show_bug.cgi?id=277181 rdar://132603871

Reviewed by Alex Christensen.

When we dispatch the provisional load failure in the FrameLoader, we include
two additional bits of information: whether we are attempting a recovery
through an internal mechanism, and whether this failure is fatal and we won't
continue loading something else. Currently these are distinct bits, but they
shouldn't be. If we are handling the failure internally, then that implies that
the load will continue. The consequence of the current behavior is that we
might prematurely destroy the ProvisionalPageProxy and the load will hang.

This patch initializes the WillContinueLoading depending on the state of
WillInternallyHandleFailure. And this adds a new test for this case.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::dispatchDidFailProvisionalLoad):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(TEST(WKNavigation, HTTPSFirstHTTPDowngradeAfterPSON)):

Canonical link: https://commits.webkit.org/281626@main